feat(databinding)：MVVM databinding架构实现 简单的MVVM databinding架构demo实现

--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -21,6 +21,7 @@
             android:layout_width="60dp"
             android:layout_height="0dp"
             android:padding="4dp"
+            imageUrl="@{user.avatar}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
